--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
-    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
-    "postinstall": "cd studio && yarn"
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "sideEffects": false,
   "license": "MIT",
@@ -30,7 +29,7 @@
     "js-cookie": "^3.0.0",
     "jsondiffpatch": "^0.4.1",
     "marqy": "^0.0.8",
-    "next": "^12.0.7",
+    "next": "^12.0.1",
     "next-themes": "0.2.0",
     "qs": "^6.10.1",
     "query-string": "^7.0.1",
