lots of changes to contact-form css

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,17 @@
     "titleBar.inactiveForeground": "#000000",
     "titleBar.activeBackground": "#1EA66B",
     "titleBar.inactiveBackground": "#1EA66B"
-  }
+  },
+  "editor.formatOnSave": true,
+  "[javascript]": {
+    "editor.formatOnSave": false
+  },
+  "[javascriptreact]": {
+    "editor.formatOnSave": false
+  },
+  "eslint.alwaysShowStatus": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  },
+  "prettier.disableLanguages": ["javascript", "javascriptreact"]
 }
