--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/image-url": "^1.0.1",
     "@vimeo/player": "^2.15.3",
     "axios": "0.27.2",
+    "babel-eslint": "^10.1.0",
     "base64-string": "^1.1.2",
     "classnames": "^2.2.6",
     "contrast-color": "^1.0.1",
@@ -56,7 +57,23 @@
     "postcss": "^8.3.11",
     "postcss-import": "^14.0.2",
     "tailwindcss": "^3.0.5",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-wesbos": "^1.0.1",
+    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "wesbos"
+    ]
   },
   "peerDependencies": {
     "postcss": "^8.4.5"
