--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "raw-body": "^2.4.1",
     "react": "^17.0.2",
     "react-cool-inview": "3.0.1",
+    "react-datetime-picker": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "7.33.0",
     "react-keyed-flatten-children": "^1.3.0",
     "shopify-buy": "^2.13.0",
     "sitemap": "^7.0.0",
-    "swr": "^1.0.0"
+    "swr": "^1.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.1",
