--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.71",
+    "@netlify/plugin-nextjs": "^4.14.0",
     "@reach/rect": "0.17.0",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^3.0.3",
