--- a/package.json
+++ b/package.json
@@ -57,10 +57,6 @@
     "@types/shopify-buy": "^2.10.5",
     "autoprefixer": "^10.4.0",
     "cssnano": "^5.0.13",
-    "postcss": "^8.3.11",
-    "postcss-import": "^14.0.2",
-    "tailwindcss": "^3.0.5",
-    "typescript": "^4.4.4",
     "eslint": "^7.14.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
@@ -71,7 +67,11 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.2.1"
+    "postcss": "^8.3.11",
+    "postcss-import": "^14.0.2",
+    "prettier": "^2.2.1",
+    "tailwindcss": "^3.0.5",
+    "typescript": "^4.4.4"
   },
   "eslintConfig": {
     "extends": [
