--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.14.0",
     "@next/bundle-analyzer": "^12.0.1",
+    "@next/eslint-plugin-next": "^12.2.3",
     "@types/classnames": "^2.2.10",
     "@types/cookie": "0.5.1",
     "@types/node": "^17.0.0",
