--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "cross-env NODE_ENV=development next dev",
     "build": "echo 'Building Sanity to public/studio…' && cd studio && npx sanity build ../public/studio -y && cd .. && next build",
     "start": "next start",
+    "lint": "next lint",
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
@@ -25,6 +26,7 @@
     "contrast-color": "^1.0.1",
     "cross-env": "^7.0.3",
     "embla-carousel-react": "^6.0.2",
+    "eslint-plugin-react": "^7.30.1",
     "focus-trap-react": "9.0.2",
     "formik": "^2.2.9",
     "framer-motion": "6.3.15",
@@ -59,22 +61,13 @@
     "autoprefixer": "^10.4.0",
     "cssnano": "^5.0.13",
     "eslint": "^7.14.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-config-wesbos": "^1.0.1",
-    "eslint-plugin-html": "^6.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-config-next": "12.2.3",
     "postcss": "^8.3.11",
     "postcss-import": "^14.0.2",
     "prettier": "^2.2.1",
     "tailwindcss": "^3.0.5",
     "typescript": "^4.4.4"
   },
- 
   "peerDependencies": {
     "postcss": "^8.4.5"
   }
