--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "marqy": "^0.0.8",
     "next": "^12.0.1",
     "next-themes": "0.2.0",
+    "phosphor-react": "^1.4.1",
     "qs": "^6.10.1",
     "query-string": "^7.0.1",
     "raw-body": "^2.4.1",
