--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "eslint-plugin-react": "^7.30.1",
     "focus-trap-react": "9.0.2",
     "formik": "^2.2.9",
-    "framer-motion": "6.3.15",
+    "framer-motion": "^6.5.1",
     "js-cookie": "^3.0.0",
     "jsondiffpatch": "^0.4.1",
     "marqy": "^0.0.8",
